# ztask

./: .gitignore  Cargo.toml  README.md  check  report  show  zt
.github/workflows/: ci.yml
src/: cli.rs  command_line_interface.rs  lib.rs  main.rs  search.rs  simple_duration.rs  task.rs  tasklist.rs
