[package]
name = "ztask"
version = "0.1.0"
authors = ["Tom Zakrajsek <tzakrajsek@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.76"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1.0"
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.10.0"
parse_duration = "2.1.1"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization and deserialization
]
